--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="row" id="totalCount"></div>
         <div class="row" id="covidPositiveMap"></div>
         <div class="row" id="covidDeathMap"></div>
+        <div class="row" id="covidDailyCases"></div>
     </div>
     <script src="./index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" defer></script>
