--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">Data source - https://covidtracking.com/api/</div>
+        <div class="row">Data source -<a href="https://covidtracking.com/api/" target="_blank"> https://covidtracking.com/api/</a></div>
         <div class="row" id="covidPositiveMap"></div>
         <div class="row" id="covidDeathMap"></div>
         <div class="row" id="covidDailyCases"></div>
