--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>COVID-19 USA</title>
     <link type="text/css" rel="stylesheet" href="./covid.css">
+    <link type="image/x-icon" rel="shortcut icon" href="./images/logo.jpg">
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#2196f3"/>
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
