updating theme color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link type="text/css" rel="stylesheet" href="./covid.css">
     <link type="image/x-icon" rel="shortcut icon" href="./images/logo.jpg">
     <link rel="manifest" href="./manifest.json">
-    <meta name="theme-color" content="#2196f3"/>
+    <meta name="theme-color" content="#AC2C2D"/>
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
