--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">Data source -<a href="https://covidtracking.com/" target="_blank"> https://covidtracking.com/</a></div>
         <div class="row" id="covidPositiveMap"></div>
         <div class="row" id="covidDeathMap"></div>
         <div class="row" id="covidDailyCases"></div>
@@ -31,6 +30,8 @@
             <select id="stateSelect" class="form-control col-sm-4"></select>
         </div>
         <div class="row" id="covidDailyStateCases"></div>
+        <div class="row">Data source -&nbsp;<a href="https://covidtracking.com/" target="_blank"> https://covidtracking.com/</a></div>
+      
     </div>
     <script src="./index.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" defer></script>
