--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 </head>
 <body>
     <div class="container">
+        <h4>
+            Daily updated data visualization on COVID-19 outbreak in the United States retried from 
+            <a href="https://covidtracking.com/" target="_blank">covidtracking</a>.
+        </h4>
         <div class="row" id="covidPositiveMap"></div>
         <div class="row" id="covidDeathMap"></div>
         <div class="row" id="covidDailyCases"></div>
         <div class="row">
             <select id="stateSelect" class="form-control col-sm-4"></select>
         </div>
-        <div class="row" id="covidDailyStateCases"></div>
-        <div class="row">Data source -&nbsp;<a href="https://covidtracking.com/" target="_blank"> https://covidtracking.com/</a></div>
-      
+        <div class="row" id="covidDailyStateCases"></div> 
     </div>
     <script src="./index.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" defer></script>
