--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+    <!-- <div class="navbar navbar-expand-xl navbar-dark navbar-shadow">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" id="navBarBtn" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav grid">
+                    <div class="nav-item grid-elements">
+                        <a class="nav-link nav-menu-links" href="" title="Conluence github issues">
+                            Confirmed cases
+                        </a>
+                    </div>
+                    <div class="nav-item grid-elements">
+                        <a class="nav-link nav-menu-links" href="" title="Conluence github issues">
+                            Report issue
+                        </a>
+                    </div>
+                    <div class="nav-item grid-elements">
+                        <a class="nav-link nav-menu-links" href="" title="Conluence github issues">
+                            Report issue
+                        </a>
+                    </div>
+                    <div class="nav-item grid-elements">
+                        <a class="nav-link nav-menu-links" href="" title="Conluence github issues">
+                            Report issue
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <div class="container">
         <h4>
             Daily updated data visualization on COVID-19 outbreak in the United States retried from 
