--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div> -->
     <div class="container">
         <h4>
-            Daily updated data visualization on COVID-19 outbreak in the United States retried from 
+            Daily updated data visualization on COVID-19 outbreak in the United States retrieved from 
             <a href="https://covidtracking.com/" target="_blank">covidtracking</a>.
         </h4>
         <div class="row" id="covidPositiveMap"></div>
