--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             Daily updated data visualization on COVID-19 outbreak in the United States retrieved from 
             <a href="https://covidtracking.com/" target="_blank">covidtracking</a>.
         </h4>
-        <div class="row" id="covidPositiveMap"></div>
-        <div class="row" id="covidDeathMap"></div>
-        <div class="row" id="covidDailyCases"></div>
+        <div class="row sub-div-shadow custom-margin" id="covidPositiveMap"></div>
+        <div class="row sub-div-shadow custom-margin" id="covidDeathMap"></div>
+        <div class="row sub-div-shadow custom-margin" id="covidDailyCases"></div>
         <div class="row">
-            <select id="stateSelect" class="form-control col-sm-4"></select>
+            <label for="stateSelect" class="col-sm-2 col-form-label">Filter by state: </label><select id="stateSelect" class="form-control col-sm-4 sub-div-shadow custom-margin"></select>
         </div>
-        <div class="row" id="covidDailyStateCases"></div> 
+        <div class="row sub-div-shadow custom-margin" id="covidDailyStateCases"></div> 
     </div>
     <script src="./index.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" defer></script>
