--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         <div class="row sub-div-shadow custom-margin" id="covidPositiveMap"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDeathMap"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDailyCases"></div>
-        <div class="row">
-            <label for="stateSelect" class="col-sm-2 col-form-label">Filter by state: </label><select id="stateSelect" class="form-control col-sm-4 sub-div-shadow custom-margin"></select>
-        </div>
+        <div class="row" id="stateSelectionDiv"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDailyStateCases"></div> 
     </div>
     <script src="./index.js" type="module"></script>
