--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row sub-div-shadow custom-margin" id="covidPositiveMap"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDeathMap"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDailyCases"></div>
-        <div class="row" id="stateSelectionDiv"></div>
+        <div class="row custom-margin" id="stateSelectionDiv"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDailyStateCases"></div> 
     </div>
     <script src="./index.js" type="module"></script>
