--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div> -->
     <div class="container">
         <h4>
-            Daily updated data visualization on COVID-19 outbreak in the United States retrieved from 
-            <a href="https://covidtracking.com/" target="_blank">covidtracking</a>.
+            Daily updated data visualization on COVID-19 outbreak in the United States. Data retrieved from 
+            <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs.
         </h4>
         <div class="row sub-div-shadow custom-margin" id="covidPositiveMap"></div>
         <div class="row sub-div-shadow custom-margin" id="covidDeathMap"></div>
