--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </h4>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link" href="#source_CSSEJHU">CSSE-JHU</a>
+              <a class="nav-link" href="#source_CSSEJHU"><strong>CSSE-JHU</strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#source_covidtracking">covidtracking</a>
+              <a class="nav-link" href="#source_covidtracking"><strong>covidtracking</strong></a>
             </li>
         </ul>
         <div id="root"></div>
