--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div> -->
     <div class="container">
         <h4>
-            Daily updated data visualization on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
+            Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
             <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs.
         </h4>
         <ul class="nav nav-tabs">
