--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
         <h4>
             Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
-            <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs.
+            <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs. Select data source from tabs below:
         </h4>
         <ul class="nav nav-tabs">
             <li class="nav-item">
