--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>COVID-19 USA</title>
+    <title>COVID-19</title>
     <link type="text/css" rel="stylesheet" href="./covid.css">
     <link type="image/x-icon" rel="shortcut icon" href="./images/logo.jpg">
     <link rel="manifest" href="./manifest.json">
