--- a/index.html
+++ b/index.html
@@ -55,8 +55,16 @@
     </div> -->
     <div class="container">
         <h4>
-            Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
-            <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs. Select data source from tabs below:
+            <div class="row">
+                <div class="ml-auto">
+                    <a style="color:#41519b;" title="Github repository" href="http://www.github.com/bhaumik55231/COVID-19" target="_blank"><i class="fab fa-github"></i></a>
+                    <a style="color:#41519b;" title="Github issues" href="http://www.github.com/bhaumik55231/COVID-19/issues" target="_blank"><i class="fas fa-bug"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
+                <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs. Select data source from tabs below:
+            </div>
         </h4>
         <ul class="nav nav-tabs">
             <li class="nav-item">
