--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                 </div>
             </div>
             <div class="row">
-                Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
-                <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs. Select data source from tabs below:
+                <span>
+                    Daily updated data visualization using <a href="https://plot.ly/javascript/">plotly js</a> on COVID-19 outbreak. Data retrieved from <a href="https://www.github.com/CSSEGISandData/COVID-19">Center for Systems Science and Engineering Center</a> at Johns Hopkins University and
+                    <a href="https://covidtracking.com/" target="_blank">covidtracking</a> APIs. Select data source from tabs below:
+                </span>
             </div>
         </h4>
         <ul class="nav nav-tabs">
